# simple-os-rust

./: Cargo.toml  README.md  qemu.sh
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
