[package]
name = "simpleos"
version = "0.1.0"
authors = ["CallOrRet <CallOrRet@outlook.com>"]
edition = "2024"

[dependencies]
spin = "0.5.2"
x86_64 = "0.14.2"
volatile = "0.2.6"
uart_16550 = "0.2.0"
bootloader = { version = "0.9" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = [
  "-vnc",
  ":0,password=on",
  "-monitor",
  "stdio",
  "-display",
  "none",
  "-audiodev",
  "none,id=none",
]
test-args = [
  "-display",
  "none",
  "-audiodev",
  "none,id=none",
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
]
test-timeout = 30
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false
